gitops/manifests/website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: website
