gitops/manifests/website/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: website
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - website.k8s.br0tbox.de
    secretName: website-tls
  rules:
    - host: website.k8s.br0tbox.de
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: website
                port:
                  number: 80
